public_html/main.css
/* 
    Created on : May 23, 2014, 4:04:07 PM
    Author     : Anand.Tamariya
*/
body {
    padding: 0;
    margin: 0;
    overflow:hidden;
}
div {
    border: 1px solid;
    border-radius: 5px;
    // box-shadow: 10px 10px 5px #888888;
}
div > div  {
    margin-left:auto;
    margin-right:auto;
    margin: 5px
}

input {
    border-radius: 5px;
}
input:active { background: gray; } 

ul {
    //list-style-image: url("icon.png");
    list-style-type: none;
    //margin-left: 0;
    padding-left: 0;
}
li {
    //margin-left: 0;
}
#toolbar {
    text-align: right;
}

#tabs {
    text-align: center;
}

#main {
    overflow-y: auto;
    overflow-x: hidden;
}
.device {
    border-radius: 0;
    margin: 5px;
    //padding: 5px;
    width: inherit;
    position: relative;
}
.device > div {
    border: 0;
    text-align: center;
}
.device .type {
    width: 10%;
    float: left;
}
.device .name {
    width: 70%;
    float: left;
}
.device input {
    width: 10em;
}

#dialog {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity:0.8;
    z-index: 10;
    border-radius: 0;
    text-align: center;
    overflow: hidden ;
    display: none;
}

#dialog div {
    background: blue;
    position: fixed;
    top: 30%;
    display: none;
}

#slider {
    left: 30%;
    max-height: 5%;
    padding: 5%;
    transform: rotate(-90deg);
    -ms-transform:rotate(-90deg); /* IE 9 */
    -webkit-transform:rotate(-90deg); /* Opera, Chrome, and Safari */
}

#settings {
    left: 10%;
    padding: 2%;
}
#settings input {
    width: 10em;
}

/* Default styles first then media queries */
@media screen and (min-width: 480px)  {
    #slider {
        padding: 1%;
        transform: rotate(0deg);
        -ms-transform:rotate(0deg); /* IE 9 */
    }
}

